--- a/blogAPI/appsettings.json
+++ b/blogAPI/appsettings.json
@@ -2,5 +2,13 @@
   "MongoConnection": {
     "ConnectionString": "mongodb://localhost:27017",
     "Database": "BlogDB"
+  },
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
   }
 }
