--- a/blogAPI/appsettings.json
+++ b/blogAPI/appsettings.json
@@ -6,9 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  },
-  "MongoConnection": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "Database": "BlogDB"
   }
+  // "MongoConnection": {
+  //   "ConnectionString": "mongodb://localhost:27017",
+  //   "Database": "BlogDB"
+  // }
 }
