--- a/blogAPI/project.json
+++ b/blogAPI/project.json
@@ -19,7 +19,8 @@
     "Microsoft.AspNetCore.Mvc": "1.0.2",
     "MongoDB.Driver": "2.4.1",
     "MongoDB.Bson": "2.4.1",
-    "MongoDB.Driver.Core": "2.4.1"
+    "MongoDB.Driver.Core": "2.4.1",
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "tools": {
