--- a/blogAPI/project.lock.json
+++ b/blogAPI/project.lock.json
@@ -9834,7 +9834,8 @@
       "Microsoft.NETCore.App >= 1.1.0",
       "MongoDB.Bson >= 2.4.1",
       "MongoDB.Driver >= 2.4.1",
-      "MongoDB.Driver.Core >= 2.4.1"
+      "MongoDB.Driver.Core >= 2.4.1",
+      "Newtonsoft.Json >= 9.0.1"
     ],
     ".NETCoreApp,Version=v1.1": []
   },
