--- a/blogAPI/project.json
+++ b/blogAPI/project.json
@@ -15,12 +15,13 @@
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.1",
     "Microsoft.AspNetCore.Mvc": "1.0.2",
     "MongoDB.Driver": "2.4.1",
     "MongoDB.Bson": "2.4.1",
     "MongoDB.Driver.Core": "2.4.1",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.1"
   },
 
   "tools": {
