--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "blogui",
+  "name": "finjournal",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Blog platform",
+  "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server",
+    "prod": "webpack -p"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ALKONDR/BlogPlatform.git"
+  },
+  "author": "ALKONDR",
   "license": "ISC",
-  "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-http-request": "^1.0.2",
-    "react-router": "^3.0.1"
+  "bugs": {
+    "url": "https://github.com/ALKONDR/BlogPlatform/issues"
   },
+  "homepage": "https://github.com/ALKONDR/BlogPlatform#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
-    "webpack": "^1.14.0"
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.28.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
