--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -20,9 +20,16 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "html-webpack-plugin": "^2.28.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
