--- a/blogAPI/project.json
+++ b/blogAPI/project.json
@@ -21,7 +21,8 @@
     "MongoDB.Bson": "2.4.1",
     "MongoDB.Driver.Core": "2.4.1",
     "Newtonsoft.Json": "9.0.1",
-    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.1"
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.1",
+    "Microsoft.AspNetCore.Cors": "1.1.1"
   },
 
   "tools": {
