--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "axios": "^0.16.1"
+    "axios": "^0.16.1",
+    "qs": "^6.4.0"
   }
 }
