--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
