--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -22,8 +22,11 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -42,6 +45,8 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "qs": "^6.4.0"
   }
 }
