--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.16.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
-    "qs": "^6.4.0"
+    "qs": "^6.4.0",
+    "react-router-dom": "^4.1.1"
   }
 }
