--- a/blogUI/package.json
+++ b/blogUI/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "prop-types": "^15.5.8",
